--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,156 +1,271 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-    font-family: "Avenir Next";
-    background-image: url(folder/304877_l.jpg)
-}
-li {
-    list-style: none;
-
-    /*float: left;
-    padding: 15px 40px; メモ書き*/
+  margin: 0;
+  font-family: "Hiragino Kaku Gothic ProN";
 }
 
+a {
+  text-decoration: none;
+}
 
+.container {
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
 
+.top-wrapper {
+  padding: 180px 0 100px 0;
+  background-image: url(top.png);
+  background-size: cover;
+  color: white;
+  text-align: center;
+}
+
+.top-wrapper h1 {
+  opacity: 0.7;
+  font-size: 45px;
+  letter-spacing: 5px;
+}
+
+.top-wrapper p {
+  opacity: 0.7;
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+
+.btn-wrapper {
+  text-align: center;
+}
+
+.btn-wrapper p {
+  margin-bottom: 20px;
+}
+
+.signup {
+  background-color: #239b76;
+}
+
+.facebook {
+  background-color: #3b5998;
+  margin-right: 10px;
+}
+
+.twitter {
+  background-color: #55acee;
+}
+
+.btn {
+  padding: 8px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.fa {
+  margin-right: 5px;
+}
 
 header {
-    height: 50px;
-    width: 100%;
-    background-color:black;
-    position:fixed;
-    top:0;
-    z-index:10;
-  }
-  .header-center{
+  height: 65px;
+  width: 100%;
+  background-color: rgba(34,49,52,0.9);
+  position :fixed;
+  top: 0;
+  z-index: 10;
 }
-  .header-logo {
-    float: left;
-      color:red;
-      padding:0 25px;
-      margin-top: 13px;
-      margin-bottom: 13px;
-  }
-  .header-right {
-    float: right;
-    background-color: rgba(255, 255, 255, 0.3);
-    transition:all 0.5s;
-  }
-  .header-right a {
-    line-height:50px;
-    padding:0 25px;
-    color:white;
-    display:block;
-  }
-  .header-right:hover {
-    background-color:turquoise;
-  }
 
-
-
-
-  
-.top-wrapper {
-    height: 800px;
+.logo {
+  width: 124px;
+  margin-top: 20px;
 }
-.top-container{
-    text-align:center;
-    margin-top: 400px;
-}
-.top-container h1{
-    height: 170px;
-    font-size: 35px;
-    color: white;
-    /*opacity: 0.8;
-    /*background-color: tomato;*/
-    margin-top: 60px;
-}
-.top-container p{
-    font-size: 15px;
-    color: white;
-    /*background-color: violet;*/
-    margin-top: 200px;
 
+.header-left {
+  float: left;
 }
-.btn-wrapper{
-    height: 100px;
+
+.header-right {
+  float: right;
+  margin-right: -25px;
 }
-.btn-wrapper p{
-    font-size: 10px;
-    color: white;
-    /*background-color:wheat;*/
-    margin-top: 10px;
+
+.header-right a {
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+  float: left;
+  transition: all 0.5s;
 }
-.signup {
-    background-color:coral;
-    margin-top: 90px;
-  }
-  
-  .facebook {
-    background-color: #3b5998;
-    margin-right: 10px;
-  }
-  
-  .twitter {
-    background-color: #55acee;
-  }
-  .btn {
-    padding: 8px 24px;
-    color: white;
-    display: inline-block;
-    /* opacity: 0.8; */
-    border-radius: 4px;
-  }
-  
-  .btn:hover {
-    opacity: 1;
-  }
-  
-  .fa {
-    margin-right: 5px;
-  }
 
-
-
-
-
-.lesson-wrapper{
-    width: 100%;
-    height: 800px;
+.header-right a:hover {
+  background-color: rgba(255,255,255,0.3);
 }
-.heading h2{
-    text-align: center;
-    font-size: 25px;
-    color: white;
-    margin-top: 200px;
+
+.lesson-wrapper {
+  height: 580px;
+  padding-bottom: 80px;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: #f7f7f7;
+  text-align: center;
 }
+
+.heading {
+  padding-top: 80px;
+  padding-bottom: 50px;
+  color: #5f5d60;
+}
+
+.heading h2 {
+  font-weight: normal;
+}
+
 .lesson {
-    float: left;
-    width: 25%;
-    margin-top: 50px;
-  }
-  .lesson-icon {
-    position: relative;
-  }
-  .lesson-icon p {
-    font-size: 14px;
-    position: absolute;
-    top: 75px;
-    left: 40px;
-    width: 100%;
-    color: white;
-  }
-  .txt-contents{
-    color: white;
-    font-size: 15px;
-  }
-
-
-.footer-container{
-    text-align: center;
+  float: left;
+  width: 25%;
 }
-  .footer-logo{
-      font-size: 30px;
-      color:white;
+
+.lesson-icon {
+  position: relative;
+}
+
+.lesson-icon p {
+  position: absolute;
+  top: 37%;
+  width: 100%;
+  color: white;
+}
+
+.text-contents {
+  width: 80%;
+  display: inline-block;
+  margin-top: 15px;
+  font-size: 13px;
+  color: #b3aeb5;
+}
+
+.heading h3 {
+  font-weight: normal;
+}
+
+.message-wrapper {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 80px;
+  text-align: center;
+}
+
+.message {
+  padding: 15px 40px;
+  background-color: #5dca88;
+  cursor: pointer;
+  box-shadow: 0px 7px #1a7940;
+}
+
+.message:active {
+  position: relative;
+  top: 7px;
+  box-shadow: none;
+}
+
+footer img {
+  width: 125px;
+}
+
+footer p {
+  color: #b3aeb5;
+  font-size: 12px;
+}
+
+footer {
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display: none;
+}
+
+.clear {
+  clear: left;
+}
+
+@media all and (max-width: 1000px) {
+  .lesson {
+    width: 50%;
+    margin-bottom: 50px;
   }
-  .footer-list{
-      color:white;
+
+  .lesson-wrapper {
+    height: 990px;
   }
+
+  footer {
+    text-align: center;
+  }
+}
+
+@media all and (max-width: 750px) {
+  .top-wrapper h1 {
+    font-size: 32px;
+  }
+
+  .heading h2 {
+    font-size: 20px;
+  }
+}
+
+@media all and (max-width: 670px) {
+  .header-right {
+    display: none;
+  }
+
+  .menu-icon {
+    display: block;
+  }
+
+  .top-wrapper .btn {
+    width: 100%;
+  }
+
+  .twitter {
+    margin-top: 10px;
+  }
+
+  .top-wrapper {
+    text-align: left;
+  }
+
+  .top-wrapper h1 {
+    font-size: 24px;
+  }
+
+  .top-wrapper p {
+    font-size: 14px;
+  }
+
+  .lesson {
+    width: 100%;
+  }
+
+  .lesson-wrapper {
+    height: 1700px;
+  }
+
+  .message-wrapper .btn {
+    width: 100%;
+  }
+}
